Expand short topic posts with failure modes and limits.
Add a worked failure mode and a "when this is the wrong tool" section to topic articles under 780 body words, and set updatedAt to 2026-09-16 where it was missing.